Remove leftovers from alert, fix double focus issue on mozilla, make inline-help vertical align

--- a/docs/_sass/_docs-display-component.scss
+++ b/docs/_sass/_docs-display-component.scss
@@ -16,6 +16,7 @@
     > .fd-tile__content {
         padding: 60px 20px;
         width: 100%;
+        max-width: 100%;
     }
 
     > p {
